<resources>
    <string name="app_name">RoseBandwidth</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="field_required">This field is required</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="action_logout">Log Out</string>
    <string name="dialog_alarm_add_name_hint">Alarm Name</string>
    <string name="dialog_alarm_add_amount_hint">Alarm Amount</string>
    <string name="percentage">Percentage (%)</string>
    <string name="megabytes">Megabytes (MB)</string>
    <string name="gigabytes">Gigabytes (GB)</string>

    <string name="dialog_alarm_add_title">Add an Alarm</string>
    <string name="dialog_alarm_edit_title">Edit an Alarm</string>
    <string name="remove">Remove</string>
    <string name="remove_question_format">Remove %s?</string>
    <string name="action_refresh">Refresh</string>
    <string name="home">Home</string>
    <string name="devices">Devices</string>
    <string name="alarms">Alarms</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="rose_bandwidth">RoseBandwidth</string>
</resources>
