<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/dialog_alarm_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_alarm_add_name_hint"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/dialog_alarm_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_alarm_add_amount_hint"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usage_type_buttons">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage"
            android:id="@+id/percent_button" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/megabytes"
            android:id="@+id/mb_button" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gigabytes"
            android:id="@+id/gb_button" />

    </RadioGroup>
</LinearLayout>